# aprilgrid-rs

./: .gitignore  Cargo.toml  README.md
benches/: bench_blur.rs  bench_detection.rs
examples/: bench_detection.rs  demo.rs  develop.rs
scripts/: generate_aprilgrid.py
src/: board.rs  detector.rs  gaussian_blur.rs  homography.rs  image_util.rs  lib.rs  math_util.rs  quad.rs  saddle.rs  tag_families.rs
tests/: test_detector.rs
