[package]
name = "aprilgrid"
version = "0.5.3"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Aprilgrid"
homepage = "https://github.com/powei-lin/aprilgrid-rs"
repository = "https://github.com/powei-lin/aprilgrid-rs"
keywords = ["apriltag", "aprilgrid", "aruco"]
categories = ["data-structures", "science", "mathematics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "scripts/*",
    "examples/*",
    "tests/*",
    "venv/*",
    "data/*",
    ".ruff_cache/*",
    "docs/*",
]

[dependencies]
faer = "0.20.2"
glam = "0.29.2"
image = "0.25.4"
imageproc = "0.25.0"
itertools = "0.14.0"
kiddo = "5.0.3"
kornia = { version = "0.1.8", optional = true }
rand = "0.8.5"

[features]
kornia = ["dep:kornia"]

[dev-dependencies]
clap = { version = "4.5.24", features = ["derive"] }
env_logger = "0.11.6"
glob = "0.3.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rerun = "0.17.0"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "develop"
path = "examples/develop.rs"
