[package]
name = "aprilgrid"
version = "0.6.1"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Aprilgrid"
homepage = "https://github.com/powei-lin/aprilgrid-rs"
repository = "https://github.com/powei-lin/aprilgrid-rs"
keywords = ["apriltag", "aprilgrid", "aruco"]
categories = ["data-structures", "science", "mathematics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "scripts/*",
    "examples/*",
    "tests/*",
    "venv/*",
    "data/*",
    ".ruff_cache/*",
    "docs/*",
]

[dependencies]
faer = "0.23.2"
glam = "0.30"
image = { version = "0.25", optional = true }
imageproc = { version = "0.25.0", optional = true }
itertools = "0.14.0"
kiddo = "5.2"
kornia = { version = "0.1.9", optional = true }
rand = "0.9"

[features]
default = ["image", "imageproc"]
kornia = ["dep:kornia"]

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3"
rand_chacha = "0.9.0"
rerun = "0.27.2"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "develop"
path = "examples/develop.rs"
